# digital-album-project

./: .gitignore  CMakeLists.txt  calc_crc.py  partitions.csv  scratch_clean.py  sdkconfig.defaults
.lingma/rules/: coding.md
backend/: config.py  main.py  photos.db  requirements.txt  server.py  upload.db
backend/output/: photo__DSC3885.rgb565  photo__DSC8087.rgb565  photo_pexels-amanda-vitoria-101598652-9834316.rgb565  photo_pexels-parimoofarhaan-29434105.rgb565
backend/services/: test_16k_16b.pcm  voice_server.py  voice_system_prompt.md
backend/tasks/: render_daily.py  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.md
main/app/: app_event.c
main/lv_ui/include/: lvgl_ui_task.h  waveshare_rgb_lcd_port.h
main/lv_ui/src/: lv_font_cjk_16.c  lv_font_cjk_20.c  lv_voice_assistant.c  lv_voice_assistant.h  lvgl_ui_task.c  ui_main.c  waveshare_rgb_lcd_port.c
main/net_mgr/: net_mgr.c
main/peripherals/: aht20_sensor.c  aht20_sensor.h  he30.c  pcf8574_io.c  peripherals.c  peripherals.h
main/peripherals/include/: aht20_sensor.h  i2s_mic_input.h  i2s_output.h  mpu6050_sensor.h  pcf8574_io.h  peripherals_task.h  tca9548a.h
main/peripherals/src/: aht20_sensor.c  aroma_ctrl.c  audio_player.c  he30.c  mpu6050_sensor.c  pcf8574_io.c  peripherals_task.c  tca9548a.c
main/photo_client/: photo_client.c  photo_client.h
main/voice_assistant/include/: audio_buf.h  voice_assistant.h  voice_io.h  ws_voice.h
main/voice_assistant/src/: audio_buf.c  voice_assistant.c  voice_assistant_task.c  voice_io.c  ws_voice.c
scripts/: generate_lvgl_font.py
(+22 files in other folders)
